--- a/home/templates/home/home.html
+++ b/home/templates/home/home.html
@@ -7,7 +7,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>789789</h1>
+    <a href="{% url 'main:create' %}">新增</a>
+    <a href="{% url 'main:delete' %}">刪除</a>
+    <a href="{% url 'main:update' %}">修改</a>
+    <a href="{% url 'main:read' %}">查詢</a>
+
+
+    <h1>78978955555555</h1>
     {% for i in data %}
     <li>
         {{i.categoryid}}
